# failsafe

./: .env.example  .gitignore  Cargo.toml  Cross.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
crates/failsafe/: Cargo.toml
crates/failsafe-bindings/: Cargo.toml
crates/failsafe-bindings/src/: main.rs
crates/failsafe-clipboard/: Cargo.toml
crates/failsafe-clipboard/src/: feature.rs  io.rs  lib.rs  limits.rs  payload.rs
crates/failsafe-clipboard/src/feature/: image.rs  inbound.rs  mod.rs  outbound.rs  watcher.rs
crates/failsafe-clipboard/src/io/: content.rs  files.rs  linux_files.rs  mock.rs  mod.rs  system.rs
crates/failsafe-core/: Cargo.toml
crates/failsafe-core/src/: api.rs  control.rs  device.rs  feature.rs  io.rs  lib.rs  message.rs  outbound.rs  path.rs  peer.rs  peer_address.rs  registry.rs  screen.rs  virtual_lan.rs
crates/failsafe-core/src/control/: mod.rs
crates/failsafe-core/src/control/transport/: unix.rs  windows.rs
crates/failsafe-daemon/: Cargo.toml
crates/failsafe-daemon/src/: config.rs  credentials.rs  daemon.rs  error.rs  lib.rs  main.rs  platform.rs  server.rs  sync.rs
crates/failsafe-desktop/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
crates/failsafe-desktop/capabilities/: default.json
crates/failsafe-desktop/docs/: FALLBACK_SCRAP.md  IROH_LIVE_COMPAT.md
crates/failsafe-desktop/src/: capture.rs  control.rs  feature.rs  host.rs  input.rs  keys.rs  lib.rs  main.rs  protocol.rs  relay.rs  screen_renderer.rs  shader.wgsl  viewer.rs
crates/failsafe-feature-registry/: Cargo.toml
crates/failsafe-feature-registry/src/: feature_registry.rs  lib.rs
crates/failsafe-lan/: Cargo.toml
crates/failsafe-lan/src/: control.rs  feature.rs  lib.rs  relay.rs  routing.rs  state.rs  tests.rs  tun_fd.rs  tun_helper.rs  tun_iface.rs  tun_setup.rs
crates/failsafe-port/: Cargo.toml
crates/failsafe-port/src/: control.rs  feature.rs  lib.rs  tests.rs
crates/failsafe-screen/: Cargo.toml
crates/failsafe-screen/src/: capture.rs  decode.rs  encode.rs  host.rs  lib.rs  monitor.rs  payload.rs  preprocess.rs  protocol.rs  quality.rs  relay.rs  viewer.rs  viewer_client.rs
crates/failsafe-screen/src/capture/: kde_kwin.rs  linux.rs  mod.rs
crates/failsafe-screen/src/gpu/: mod.rs  shader.wgsl
crates/failsafe-send/: Cargo.toml
crates/failsafe-send/src/: cancel.rs  control.rs  coordinator.rs  feature.rs  files.rs  inbound.rs  integration_tests.rs  lib.rs  log.rs  manifest.rs  notify.rs  outbound.rs  payload.rs  progress.rs  resume.rs  timeout.rs  transfer_state.rs
crates/failsafe-send/tests/: iroh_send_e2e.rs
crates/failsafe-server/: Cargo.toml  build.rs
crates/failsafe-server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  middleware.rs  pairing.rs  presence.rs  rate_limit.rs  refresh_token.rs  state.rs  tests.rs  totp.rs  virtual_ip.rs  web.rs
crates/failsafe-server/src/entity/: device.rs  mod.rs  recovery_code.rs  refresh_token.rs
crates/failsafe-server/src/migration/: m20250605_000001_create_tables.rs  m20250605_000002_create_pairing_codes.rs  m20250605_000003_add_device_deleted_at.rs  m20250606_000004_create_refresh_tokens.rs  m20250606_000005_add_account_2fa.rs  m20250609_000006_add_device_virtual_ip.rs  mod.rs
crates/failsafe-server/src/routes/: auth.rs  devices.rs  features.rs  mod.rs  pairing.rs
crates/failsafe-sevrer/: Cargo.toml
crates/failsafe-sevrer/src/: lib.rs  main.rs  middleware.rs  pairing.rs  state.rs  tests.rs
crates/failsafe-sevrer/src/entity/: account.rs  device.rs  mod.rs  pairing_code.rs
crates/failsafe-sevrer/src/migration/: m20250605_000002_create_pairing_codes.rs  mod.rs
crates/failsafe-sevrer/src/routes/: auth.rs  devices.rs  mod.rs  pairing.rs
crates/failsafe-shell/: Cargo.toml
crates/failsafe-shell/src/: control.rs  feature.rs  host.rs  lib.rs  relay.rs
crates/failsafe-transport/: Cargo.toml
crates/failsafe-transport/src/: codec.rs  desktop.rs  lan.rs  lib.rs  mock.rs  peer_updater.rs  port.rs  router.rs  screen.rs  shell.rs  transport.rs
crates/failsafe-transport/src/blobs/: error.rs  iroh.rs  mock.rs  mod.rs
crates/failsafe-transport/src/iroh/: address.rs  config.rs  manager.rs  mod.rs  protocol.rs  stream.rs  tests.rs  transport.rs
crates/failsafe/src/: config.rs  control.rs  control_server.rs  credentials.rs  daemon.rs  error.rs  lib.rs  main.rs  port_service.rs  screen_service.rs  server.rs  shell_service.rs  sync.rs
crates/failsafe/src/cli/: args.rs  context.rs  device_select.rs  mod.rs  util.rs
crates/failsafe/src/cli/commands/: auth.rs  desktop.rs  devices.rs  lan.rs  mod.rs  pair.rs  port.rs  run.rs  screen.rs  screen_share.rs  send.rs  shell.rs  status.rs
failsafe-desktop-ui/: index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  vite.config.ts
failsafe-desktop-ui/src/: App.tsx  desktop.css  main.tsx
failsafe-desktop-ui/src/hooks/: useFullscreen.ts  useScreenShare.ts
failsafe-desktop-ui/src/pages/: ScreenSharePage.tsx
failsafe-ui/: package.json  tsconfig.json
failsafe-ui/src/: index.css  index.ts
failsafe-ui/src/components/: AppShell.tsx  AuthCard.tsx  BrandHeader.tsx  PasswordInput.tsx  StatusBadge.tsx  ThemeToggle.tsx
failsafe-ui/src/lib/: bindings.ts  features.ts  format.ts  types.ts
failsafe-web/: index.html  package-lock.json  package.json  vite.config.ts
failsafe-web-ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
failsafe-web-ui/src/: App.tsx  main.tsx
failsafe-web-ui/src/components/: AppLayout.tsx  UnauthorizedHandler.tsx
failsafe-web-ui/src/hooks/: useAccount.ts  useDevices.ts  useFeatures.ts
failsafe-web-ui/src/lib/: api.ts  auth-events.ts  auth.test.ts  auth.ts
failsafe-web-ui/src/pages/: AccountPage.tsx  DevicesPage.tsx  LandingPage.tsx  LoginPage.tsx  NotFoundPage.tsx  RegisterPage.tsx
failsafe-web-ui/src/test/: setup.ts
failsafe-web/src/: App.tsx  index.css  main.tsx
failsafe-web/src/hooks/: useAccount.ts  (+1 more)
patches/libspa-sys/: Cargo.toml  build.rs
scripts/: build-release.sh
(+41 files in other folders)
