[workspace]
resolver = "3"
members = [
    "crates/failsafe-clipboard",
    "crates/failsafe-core",
    "crates/failsafe-daemon",
    "crates/failsafe-sevrer",
    "crates/failsafe-transport",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1"
failsafe-clipboard = { path = "crates/failsafe-clipboard" }
failsafe-core = { path = "crates/failsafe-core" }
failsafe-daemon = { path = "crates/failsafe-daemon" }
failsafe-sevrer = { path = "crates/failsafe-sevrer" }
failsafe-transport = { path = "crates/failsafe-transport" }
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "signal", "sync"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
