[workspace]
resolver = "3"
members = [
    "crates/failsafe-clipboard",
    "crates/failsafe-core",
    "crates/failsafe-daemon",
    "crates/failsafe-sevrer",
    "crates/failsafe-transport",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1"
failsafe-clipboard = { path = "crates/failsafe-clipboard" }
failsafe-core = { path = "crates/failsafe-core" }
failsafe-daemon = { path = "crates/failsafe-daemon" }
failsafe-sevrer = { path = "crates/failsafe-sevrer" }
failsafe-transport = { path = "crates/failsafe-transport" }
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "signal", "sync"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
iroh = "0.98.2"
bytes = "1"
serde_json = "1"
rand = "0.9"
tempfile = "3"
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono", "with-json"] }
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
argon2 = "0.5"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
http-body-util = "0.1"
tower = "0.5"
