[workspace]
resolver = "3"
members = [
    "crates/failsafe-bindings",
    "crates/failsafe-clipboard",
    "crates/failsafe-core",
    "crates/failsafe-port",
    "crates/failsafe-send",
    "crates/failsafe-screen",
    "crates/failsafe-shell",
    "crates/failsafe",
    "crates/failsafe-server",
    "crates/failsafe-transport",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
debug = false
lto = "thin"
codegen-units = 16
strip = true
panic = "abort"

[workspace.dependencies]
async-trait = "0.1"
failsafe-clipboard = { path = "crates/failsafe-clipboard" }
failsafe-core = { path = "crates/failsafe-core" }
failsafe-port = { path = "crates/failsafe-port" }
failsafe-send = { path = "crates/failsafe-send" }
failsafe-screen = { path = "crates/failsafe-screen" }
failsafe-shell = { path = "crates/failsafe-shell" }
failsafe = { path = "crates/failsafe" }
failsafe-server = { path = "crates/failsafe-server" }
failsafe-transport = { path = "crates/failsafe-transport" }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "signal", "sync"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
iroh = "1.0.0-rc.1"
iroh-blobs = "0.102"
bytes = "1"
serde_json = "1"
rand = "0.9"
blake3 = "1"
image = "0.25"
tempfile = "3"
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono", "with-json"] }
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
argon2 = "0.5"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
http-body-util = "0.1"
tower = "0.5"
portable-pty = "0.9"
crossterm = "0.29"
scap = "0.1.0-beta.1"
openh264 = { version = "0.9", features = ["source"] }
minifb = "0.28"
inquire = "0.9"
indicatif = "0.17"
notify-rust = "4"
tokio-util = { version = "0.7", features = ["rt"] }
walkdir = "2"
specta = { version = "2.0.0-rc.25", features = ["derive", "uuid"] }
specta-typescript = "0.0.12"
specta-serde = "0.0.12"

[patch.crates-io]
libspa-sys = { path = "patches/libspa-sys" }
scap = { path = "patches/scap" }
