[package]
name = "failsafe-clipboard"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
blake3.workspace = true
dirs.workspace = true
failsafe-core.workspace = true
failsafe-transport.workspace = true
hex = "0.4"
image.workspace = true
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "fs", "rt"] }
uuid.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
arboard = { version = "3", features = ["image-data", "wayland-data-control"] }

[target.'cfg(target_os = "macos")'.dependencies]
arboard = { version = "3", features = ["image-data"] }

[target.'cfg(target_os = "windows")'.dependencies]
arboard = { version = "3", features = ["image-data"] }

[dev-dependencies]
failsafe-transport.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
