[package]
name = "failsafe-core"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
uuid.workspace = true

[dev-dependencies]
serde_json = "1"
tokio = { workspace = true, features = ["rt-multi-thread"] }
