[package]
name = "failsafe-core"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "io-util", "net", "rt"] }
uuid.workspace = true
specta.workspace = true

[dev-dependencies]
serde_json = "1"
tokio = { workspace = true, features = ["rt-multi-thread"] }
