[package]
name = "failsafe-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
dirs.workspace = true
failsafe-clipboard.workspace = true
failsafe-core.workspace = true
failsafe-feature-registry.workspace = true
failsafe-port.workspace = true
failsafe-send.workspace = true
failsafe-shell.workspace = true
failsafe-transport = { workspace = true, features = ["iroh", "iroh-blobs"] }
reqwest.workspace = true
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "net", "io-util", "sync", "fs"] }
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
failsafe-transport = { workspace = true, features = ["test-util"] }
tempfile = "3"
