[package]
name = "failsafe-desktop"
version = "0.1.0"
description = "Failsafe desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "failsafe_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
failsafe-core = { path = "../failsafe-core" }
failsafe-screen = { path = "../failsafe-screen" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
