[package]
name = "failsafe-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
enigo = "0.6"
failsafe-core.workspace = true
failsafe-transport = { workspace = true, features = ["iroh", "iroh-blobs"] }
image = { workspace = true, features = ["jpeg"] }
iroh.workspace = true
minifb = "0.28"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "rt", "sync", "time"] }
tracing.workspace = true
xcap = "0.0.14"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
