[package]
name = "failsafe-screen"
version.workspace = true
edition.workspace = true

[dependencies]
fast_image_resize = "5"
failsafe-core.workspace = true
image.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "rt", "sync", "time"] }
tracing.workspace = true
xcap = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
libwayshot-xcap = "0.3"
rustix = { version = "1", features = ["pipe", "fs"] }
scrap = "0.5"
zbus = { version = "5", default-features = false, features = ["async-io", "blocking-api"] }
