[package]
name = "failsafe-screen"
version.workspace = true
edition.workspace = true

[dependencies]
fast_image_resize = "5"
failsafe-core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "rt", "sync", "time"] }
tracing.workspace = true
turbojpeg = "1.4"
xcap = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
libwayshot-xcap = "0.3"
scrap = "0.5"
