[package]
name = "failsafe-sevrer"
version.workspace = true
edition.workspace = true

[[bin]]
name = "failsafe-sevrer"
path = "src/main.rs"

[dependencies]
failsafe-core.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dirs.workspace = true
async-trait = "0.1"
rand = { version = "0.8", features = ["std_rng"] }

[dev-dependencies]
http-body-util.workspace = true
tower = { workspace = true, features = ["util"] }
