[package]
name = "failsafe-shell"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
failsafe-core.workspace = true
failsafe-transport = { workspace = true, features = ["iroh"] }
portable-pty.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "rt", "sync", "time"] }
tracing.workspace = true
