[package]
name = "failsafe-transport"
version.workspace = true
edition.workspace = true

[features]
default = []
test-util = []
iroh = ["dep:iroh", "dep:bytes", "dep:rand", "dep:tracing"]
iroh-blobs = ["iroh", "dep:iroh-blobs", "dep:bytes", "dep:n0-future"]

[dependencies]
async-trait.workspace = true
blake3.workspace = true
bytes = { workspace = true, optional = true }
failsafe-core.workspace = true
hex = "0.4"
iroh = { workspace = true, optional = true }
iroh-blobs = { workspace = true, optional = true }
n0-future = { version = "0.3", optional = true }
rand = { workspace = true, optional = true }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "time", "io-util", "rt", "fs"] }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
