[package]
name = "failsafe"
version.workspace = true
edition.workspace = true

[[bin]]
name = "failsafe"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
clap.workspace = true
dirs.workspace = true
dotenvy.workspace = true
failsafe-clipboard.workspace = true
failsafe-core.workspace = true
failsafe-shell.workspace = true
failsafe-transport = { workspace = true, features = ["iroh", "iroh-blobs"] }
crossterm.workspace = true
inquire.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "net", "io-util"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
gethostname = "1"
serde_json = "1"

[dev-dependencies]
failsafe-clipboard.workspace = true
failsafe-transport = { workspace = true, features = ["test-util"] }
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
